[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/digimon_panel.gd" id="1"]

[node name="DigimonPanel" type="PanelContainer"]
custom_minimum_size = Vector2(220, 120)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBox/TopRow" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
text = "Agumon"

[node name="LevelLabel" type="Label" parent="VBox/TopRow" unique_name_in_owner=true]
layout_mode = 2
text = "Lv. 5"

[node name="HPRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="HPLabel2" type="Label" parent="VBox/HPRow"]
layout_mode = 2
text = "HP"

[node name="HPBar" type="ProgressBar" parent="VBox/HPRow" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="VBox/HPRow" unique_name_in_owner=true]
layout_mode = 2
text = "100 / 100"

[node name="EnergyRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="EnergyLabel2" type="Label" parent="VBox/EnergyRow"]
layout_mode = 2
text = "EN"

[node name="EnergyBar" type="ProgressBar" parent="VBox/EnergyRow" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
show_percentage = false

[node name="EnergyLabel" type="Label" parent="VBox/EnergyRow" unique_name_in_owner=true]
layout_mode = 2
text = "50 / 50"

[node name="StatusLabel" type="Label" parent="VBox" unique_name_in_owner=true]
layout_mode = 2
text = ""
